--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "zavora-cli"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+semantic-search = ["dep:strsim"]
+
 [dependencies]
 adk-rust = { version = "0.3.0", features = ["openai", "anthropic", "deepseek", "groq", "ollama"] }
 adk-session = { version = "0.3.0", features = ["database"] }
@@ -10,6 +14,7 @@ anyhow = "1.0.101"
 clap = { version = "4.5.58", features = ["derive", "env"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
+strsim = { version = "0.11.1", optional = true }
 toml = "0.8.19"
 tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.44"
