feat: add graph workflow mode with template routing
- enable ADK graph support and add workflow graph mode
- introduce reusable workflow templates for release/architecture/risk/delivery routes
- implement graph-based orchestration path with classify -> prepare -> draft node pipeline
- add deterministic routing/template tests and include graph mode in workflow test matrix
- document graph workflow usage and routing behavior

Closes #18

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ default = []
 semantic-search = ["dep:strsim"]
 
 [dependencies]
-adk-rust = { version = "0.3.0", features = ["openai", "anthropic", "deepseek", "groq", "ollama"] }
+adk-rust = { version = "0.3.0", features = ["openai", "anthropic", "deepseek", "groq", "ollama", "graph"] }
 adk-session = { version = "0.3.0", features = ["database"] }
 adk-tool = { version = "0.3.0", features = ["http-transport"] }
 anyhow = "1.0.101"
