feat: add configurable input/output guardrail policies

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ ZAVORA_USER_ID=local-user
 ZAVORA_SESSION_ID=default-session
 ZAVORA_SESSION_BACKEND=memory
 ZAVORA_SESSION_DB_URL=sqlite://.zavora/sessions.db
+ZAVORA_GUARDRAIL_INPUT_MODE=disabled
+ZAVORA_GUARDRAIL_OUTPUT_MODE=disabled
+ZAVORA_GUARDRAIL_TERM=
+ZAVORA_GUARDRAIL_REDACT_REPLACEMENT=[REDACTED]
 
 # Provider credentials (set at least one for cloud models)
 GOOGLE_API_KEY=
