ci: add eval and guardrail quality gates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,6 @@ jobs:
 
       - name: Test
         run: cargo test
+
+      - name: Quality Gate (eval + guardrails)
+        run: make quality-gate
