--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "zavora-cli"
 version = "0.1.0"
 edition = "2024"
+rust-version = "1.85"
+description = "Rust CLI AI agent built on ADK-Rust with provider-aware runtime, workflow orchestration, and tool safety controls"
+license = "MIT"
+repository = "https://github.com/zavora-ai/zavora-cli"
+authors = ["Zavora AI <eng@zavora.ai>"]
+keywords = ["cli", "ai", "agent", "adk", "llm"]
+categories = ["command-line-utilities"]
 
 [features]
 default = []
@@ -18,7 +25,7 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 strsim = { version = "0.11.1", optional = true }
 toml = "0.8.19"
-tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net"] }
+tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
 
