--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ toml = "0.8.19"
 tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
+async-trait = "0.1.89"
 
 [dev-dependencies]
 tempfile = "3.25.0"
