feat: winnow+crossterm streaming markdown renderer
- Replace line-based MarkdownRenderer with winnow 0.7 streaming parser
- Magenta+bold headings, green code blocks, DarkGrey blockquotes
- Terminal-width-aware word wrapping with column tracking
- Blank line spacing between user input and response
- Wire parser into both streaming and buffered output paths
- Remove old MarkdownRenderer from theme.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "s
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
 async-trait = "0.1.89"
+crossterm = "0.28"
+winnow = "0.7"
 
 [dev-dependencies]
 tempfile = "3.25.0"
