feat: v1.1.2 — tool confirmation, readline, 2026 models
- Streaming markdown renderer (winnow 0.7 + crossterm)
- Interactive tool confirmation with file diff preview [y/n/t]
- Readline via rustyline (arrow keys, history, Ctrl-C)
- 2026 models: GPT-5.3-Codex, Claude Opus 4.6, Gemini 3 Pro, Llama 4
- Default log level error (suppress WARN traces)
- Runner errors no longer crash session
- Default OpenAI model gpt-4.1, Ollama llama4

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zavora-cli"
-version = "1.1.1"
+version = "1.1.2"
 edition = "2024"
 rust-version = "1.85"
 description = "Rust CLI AI agent built on ADK-Rust with provider-aware runtime, workflow orchestration, and tool safety controls"
@@ -30,6 +30,7 @@ tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
 async-trait = "0.1.89"
 crossterm = "0.28"
+rustyline = "15"
 winnow = "0.7"
 
 [dev-dependencies]
