feat: shadow-git checkpointing behind feature flag
- Feature 'checkpoints' in Cargo.toml gates the shadow module
- ShadowCheckpointManager: bare git repo at .zavora/shadow-repo/
  - init: creates bare repo, configures git, initial commit+tag
  - create: stage all, commit, tag with incrementing numbers
  - restore: git checkout <tag> -- . to restore workspace files
  - diff: git diff --stat between any two checkpoints
  - file_stats: added/modified/deleted counts via --name-status
  - format_list: display all checkpoints with timestamps
- Auto-cleanup: shadow repo removed on Drop
- Compiles cleanly with and without feature flag
- Build: cargo build --features checkpoints

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["command-line-utilities"]
 [features]
 default = []
 semantic-search = ["dep:strsim"]
+checkpoints = []
 
 [dependencies]
 adk-rust = { version = "0.3.0", features = ["openai", "anthropic", "deepseek", "groq", "ollama", "graph"] }
