feat: implement multi-agent orchestration architecture
- Add capability agents (time, memory, search) as callable tools
- Add workflow agents (file_loop, sequential, quality, orchestrator)
- Implement LLM-based auto-compaction (75% → 10% threshold)
- Add chat commands: /memory, /time, /orchestrate, /autocompact
- Add tool call transparency (show what tools are doing)
- Add initial greeting on chat start
- Make orchestrator the default agent
- Remove old weak agents (git, research, planner)
- Fix documentation discrepancies
- Add comprehensive documentation

New agents (~900 lines):
- time.rs: Native time operations and relative date parsing
- memory.rs: Persistent learnings in .zavora/memory.json
- search.rs: Gemini Google Search wrapper
- file_loop.rs: Iterative file discovery
- sequential.rs: Plan creation and step execution
- quality.rs: Verification against criteria
- orchestrator.rs: Full execution loop
- tools.rs: Expose agents as callable tools

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,9 @@ adk-session = { version = "0.3.0", features = ["database"] }
 adk-tool = { version = "0.3.0", features = ["http-transport"] }
 anyhow = "1.0.101"
 axum = { version = "0.8.6", features = ["json"] }
+chrono = "0.4"
 clap = { version = "4.5.58", features = ["derive", "env"] }
+md5 = "0.7"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 shlex = "1.3"
